@@ -41,6 +41,9 @@
     //#endif
     //#if (Kestrel)
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+    //#if (HttpsEverywhere)
+    "Microsoft.AspNetCore.Server.Kestrel.Https": "1.1.0",
+    //#endif
     //#endif
     //#if (WebListener)
     "Microsoft.AspNetCore.Server.WebListener": "1.1.0",
