@@ -1,6 +1,7 @@
 ﻿namespace MvcBoilerplate
 {
     using System.IO;
+    using System.Linq;
     using Microsoft.AspNetCore.Hosting;
     using Microsoft.Extensions.Configuration;
     // $Start-PrimaryWebServer-WebListener$
@@ -19,15 +20,33 @@
                 .AddCommandLine(args)
                 .Build();
 
+            IHostingEnvironment hostingEnvironment = null;
             var host = new WebHostBuilder()
                 .UseConfiguration(configuration)
                 .UseContentRoot(Directory.GetCurrentDirectory())
+                .ConfigureServices(
+                    services =>
+                    {
+                        hostingEnvironment = services
+                            .Where(x => x.ServiceType == typeof(IHostingEnvironment))
+                            .Select(x => (IHostingEnvironment)x.ImplementationInstance)
+                            .First();
+                    })
+                // Show error page containing information about startup exceptions when in development.
+                .CaptureStartupErrors(hostingEnvironment.IsDevelopment())
                 // $Start-PrimaryWebServer-Kestrel$
                 .UseKestrel(
                     options =>
                     {
                         // Do not add the Server HTTP header when using the Kestrel Web Server.
                         options.AddServerHeader = false;
+                        // $Start-HttpsEverywhere$
+                        if (hostingEnvironment.IsDevelopment())
+                        {
+                            // Use a self-signed certificate to enable 'dotnet run' to work in development.
+                            options.UseHttps("DevelopmentCertificate.pfx", "password");
+                        }
+                        // $End-HttpsEverywhere$
                     })
                 // $End-PrimaryWebServer-Kestrel$
                 // $Start-PrimaryWebServer-WebListener$
